# RG-project

./: README.md
RG3D-project/: CMakeLists.txt  RG3D-project.cpp  RG3D-project.sln  RG3D-project.vcxproj  RG3D-project.vcxproj.filters
RG3D-project/RG3D-project/x64/Debug/: RG3D-project.exe.recipe  RG3D-project.ilk  RG3D-project.vcxproj.FileListAbsolute.txt  vc143.idb
RG3D-project/RG3D-project/x64/Debug/RG3D-project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RG3D-project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
RG3D-project/RG3D-project/x64/Release/: RG3D-project.exe.recipe  RG3D-project.iobj  RG3D-project.ipdb  RG3D-project.vcxproj.FileListAbsolute.txt
RG3D-project/RG3D-project/x64/Release/RG3D-project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RG3D-project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
RG3D-project/headers/: camera.h  mesh.h  model.h  shader.h
RG3D-project/models/asteroids/a1/: Asteroids.mtl
RG3D-project/models/asteroids/a2/: Asteroids.mtl
RG3D-project/models/planets/p1/: Planets.mtl
RG3D-project/models/planets/p2/: Planets.mtl
RG3D-project/models/planets/p5/: Planets.mtl
RG3D-project/models/planets/p6/: Planets.mtl
RG3D-project/models/planets/p9/: Planets.mtl
RG3D-project/shaders/: text.frag
RG3D-project/x64/Release/models/asteroids/a3/: Asteroids.mtl
RG3D-project/x64/Release/shaders/: dashboard.frag  dashboard.vert  texture.frag  window.frag
(+4 files in other folders)
